--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ matplotlib
 seaborn
 flask
 
-openai>=1.3.0
 streamlit
-requests
+google-api-python-client
 python-dotenv
-pillow
+requests
+openai>=1.3.0
+pandas
+
